# maxcolor

./: .gitignore  pyproject.toml
maxcolor/: index.py  main.py  maxcolor.py  named_colors.py
