[project]
name = "maxcolor"
version = "1.0.1"
description = "A module to genereate gradient text and rich panels."
authors = [
    {name = "maxludden", email = "dev@maxludden.com"},
]
dependencies = [
    "maxconsole>=0.5.1",
    "rich>=12.6.0",
    "colr[all]>=0.9.1",
    "loguru>=0.6.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
